# qraft

./: .gitignore  ;  Cargo.toml  newexpand.rs  readme.md  rustc-ice-2025-05-29T20_08_29-1182234.txt  rustc-ice-2025-05-29T20_08_29-1182235.txt  rustc-ice-2025-05-29T20_09_04-1182654.txt  rustc-ice-2025-05-29T20_09_04-1182655.txt  rustc-ice-2025-05-29T20_09_14-1182877.txt  rustc-ice-2025-05-29T20_09_14-1182878.txt  rustc-ice-2025-05-29T20_09_21-1183038.txt  rustc-ice-2025-05-29T20_09_21-1183039.txt  rustc-ice-2025-05-29T20_10_35-1183621.txt  rustc-ice-2025-05-29T20_10_35-1183622.txt  rustc-ice-2025-05-29T20_11_16-1183977.txt  rustc-ice-2025-05-29T20_11_16-1183978.txt  rustc-ice-2025-05-29T20_11_27-1184146.txt  rustc-ice-2025-05-29T20_11_27-1184147.txt  rustc-ice-2025-05-29T20_11_46-1184393.txt  rustc-ice-2025-05-29T20_11_46-1184394.txt  rustc-ice-2025-05-29T20_11_59-1184569.txt  rustc-ice-2025-05-29T20_11_59-1184570.txt  rustc-ice-2025-05-29T20_12_22-1184837.txt  rustc-ice-2025-05-29T20_12_22-1184838.txt  rustc-ice-2025-05-29T20_12_32-1186368.txt  rustc-ice-2025-05-29T20_12_32-1186369.txt  rustc-ice-2025-05-29T20_12_42-1187837.txt  rustc-ice-2025-05-29T20_12_42-1187838.txt  rustc-ice-2025-05-29T20_12_52-1188133.txt  rustc-ice-2025-05-29T20_12_52-1188134.txt
qorm/: Cargo.toml
qorm/src/: de.rs  lib.rs  main.rs
qorm_derive/: Cargo.toml
qraft_derive/: Cargo.toml
qraft_derive/src/: between.rs  binary.rs  bindable.rs  exists.rs  in.rs  lib.rs  unary.rs
scripts/: release.sh
src/: bind.rs  builder.rs  col.rs  dialect.rs  ident.rs  insert.rs  join.rs  lib.rs  main.rs  operator.rs  paginate.rs  raw.rs  row.rs  scalar.rs  set.rs  writer.rs
src/expr/: between.rs  binary.rs  cond.rs  exists.rs  fncall.rs  group.rs  in.rs  list.rs  mod.rs  order.rs  sub.rs  unary.rs
