[package]
name = "qorm"
version = "0.1.0"
edition = "2024"
authors = ["Dany Gagnon dany@ovior.ca"]
description = "A Rust library for building SQL queries with a fluent API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oviorbit/qraft"
homepage = "https://github.com/oviorbit/qraft"
readme = "readme.md"
keywords = ["sql", "query", "builder", "fluent", "async"]
categories = ["database"]
publish = ["crates-io"]

[dependencies]
eyre = "0.6.12"
qraft = { path = "..", version = "0.3.2", features = ["sqlite", "postgres", "mysql"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.140"
smol_str = "0.3.2"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.45.1", features = ["full"] }
