[package]
name = "qraft_derive"
version = "0.1.0"
edition = "2024"
authors = ["Dany Gagnon dany@ovior.ca"]
description = "Helpers used for qraft"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qraft-rs/qraft"
homepage = "https://github.com/qraft-rs/qraft"
readme = "readme.md"
keywords = ["sql", "query", "builder", "fluent", "async"]
categories = ["database", "sql"]
publish = ["crates-io"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
